# janus-update

./: .coverage  .env.example  .gitattributes  .gitignore  .npmignore  .windsurfrules  00_AI_STUDIO_BOOTSTRAP.md  01_CENTRAL_TASK_REGISTRY.md  01_CENTRAL_TASK_REGISTRY.md.bak  AAAAnleitung wartung.md  AGENTS.md  AGENT_HANDLUNGSPLAN_TEMPLATE.md  AGENT_WORK_LOG.md  Arbeitsanweisung.md  BTC_Regelwerk_V3_OPTIMIERT.md  Bilderstellung.md  CHANGELOG.md  Chat.md  DIAMOND-REPORT_M-MEM-03-1.md  DIAMOND-REPORT_M-MEM-03.md  DIAMOND-REPORT_MEMORY_CACHE_V2.1_FIXED.md  DIAMOND-REPORT_MEMORY_CACHE_V2.md  DIAMOND-REPORT_MEMORY_V2_FINAL.md  DIAMOND-REPORT_MEMORY_V2_MIGRATION.md  DIAMOND-REPORT_V5.1_INTERFACE_FIXED.md  DIAMOND-REPORT_V6.2_CLEAN.md  DIAMOND-REPORT_V7_GLOBAL-UNLOCK.md  FEATURE_IMAGE_STUDIO.md  FEATURE_KOSTENKONTROLLE.md  GEMINI.md  GOLDSTANDARD_ANALYSE_BERICHT.md  GPTImage.md  GeminiDokumentation.md  GeminiImage.md  MANIFEST.md  PHASE_1_FUNDAMENT.md  PHASE_2_KERNFUNKTIONALITAET.md  PHASE_3_FILESYSTEM_AGENT.md  PHASE_3_UI_FEINSCHLIFF.md  PHASE_4_CHAT_MEMORY.md  (+62 more)
backend/: chat.db  chat_summarizer.py  check_dark_mode.py  check_fails.py  check_rollooff.py  config.json  context_manager.py  cost_calculator.py  costs.db  creative_writer.py  crud.py  database.py  debug_cluster1.py  debug_cluster2.py  dependencies.py  diamond_stress_test.py  download_model.py  download_silero_models.py  filesystem_manager.py  final_cert.py  final_validation.py  forensic_rag_check.py  harvester.py  image_manager.py  image_manager.py.new  key_manager.py  llm_gateway.py  logger_config.py  main.py  main_new.py  memory_extractor.py  memory_manager.py  (+43 more)
(+6740 files in other folders)
